v0.70
[BUG] : Correct bug number: 2216 (see http://www.automne-cms.org/bug/)
[BUG] : Correct a bug in installation process if Automne is installed in a subfolder
[BUG] : Correct a bug in polymod indexation

v0.69
[BUG] : If a xapian query parsing has an error, exception was not catched

v0.68
[REFACTOR] : Handle language code of 5 characters

v0.67
[BUG] : Correct a bug at installation with mod_ase_document table which exists in Automne 4.1.0 and 4.1.1

v0.66
[BUG] : Correct an XSS security issue on public search form

v0.65
[BUG] : Better handling of module if Xapian is not installed (do not crash Automne anymore)
[BUG] : Correct an anchor problem with version 4.1

v0.64
[REFACTOR] : Add support for sub folder installation
[BUG] : Correct an bug on opensearch queries

v0.63
[BUG] : Correct an XSS security issue on public search form
[BUG] : Polymod modules which are not indexed launches useless scripts to remove some content from indexes

v0.62
[REFACTOR] : Use binary path from constant instead of hard coded value
[REFACTOR] : Move binary, databases and stopwords pathes from /automne_modules_files/ase to /automne/ase

v0.61
[BUG] : Correct a notice in standard interface
[REFACTOR] : Add support for 4.1.0

v0.60
[FEATURE] : Add Spanish and Portuguese messages

v0.59
[BUG] : If a xapian search has an error, exception was not catched

v0.58
[REFACTOR] : Remove extra whitespace from indexed content and displayed results text

v0.57
[BUG] : during installation process : parameters merge does not work

v0.56
[BUG] : indexing and search were sensitive to accents, and they should not

v0.55
[BUG] : in xapianIndexer.php : call to class gtandFather instead of grandFather

v0.54
[BUG] : Interfaces filters uses "AND" operator instead of "OR" in middle of "AND NOT" clause

v0.53
[BUG] : Content inside tags <option> are also indexed

v0.52
[BUG] : In files inserted in a standard file row : Old files are not properly deleted from index
[REFACTOR] : Review module tag help

v0.51