@@ -1,7 +1,9 @@
 v0.70
 [BUG] : Correct bug number: 2216 (see http://www.automne-cms.org/bug/)
 [BUG] : Correct a bug in installation process if Automne is installed in a subfolder
+[BUG] : Correct a bug in css load if Automne is installed in a subfolder
 [BUG] : Correct a bug in polymod indexation
+[BUG] : Remove language:xx from spell corrected query string
 
 v0.69
 [BUG] : If a xapian query parsing has an error, exception was not catched
